# Figma_Image_gen

./: .gitignore  AGENT_HANDOFF.md  SETUP.md  Start Phygital Studio.bat  Start Phygital Studio.command
figma-plugin/: code.js  manifest.json  ui.html
sidecar/: .env.example  README.md  install_autostart.command  pyproject.toml  start.command  sync_runtime.command  uninstall_autostart.command
sidecar/app/: config.py  main.py  paths.py
sidecar/app/phygital_client/: auth.py  models.py  session.py
sidecar/app/routers/: assets.py  auth.py  jobs.py
sidecar/app/services/: brand_docs.py  job_runner.py  login.py  session_bootstrap.py
sidecar/app/workflows/: __init__.py  brand.py  gemini_text.py  image_to_image.py  video_kling.py  video_kling_motion.py  video_kling_omni.py  video_seedance.py  voice_tts.py
sidecar/docs/: SYSTEM_PROMPT_Gemini3Pro_CloudRu_Img2Img_Enhancer.md  SYSTEM_PROMPT_Gemini3Pro_CloudRu_Isometric_Enhancer.md  SYSTEM_PROMPT_Gemini3Pro_CloudRu_Photo_Enhancer.md  SYSTEM_PROMPT_Gemini3Pro_CloudRu_Render_Enhancer.md  SYSTEM_PROMPT_Gemini3Pro_NanoBanana_Scrubber.md
sidecar/scripts/: analyze_har.py  cli.py  debug_task.py  recon_video_nodes.py  recon_voice.py  run_sidecar.sh  run_video.py
sidecar/tests/: test_asset_cache.py  test_assets_router.py  test_config.py  test_downloader.py  test_e2e_live.py  test_health_router.py  test_image_to_image.py  test_job_runner.py  test_nodes_router.py  test_paths.py  test_session_bootstrap.py  test_task_registry.py  test_video_common.py  test_video_workflows.py  test_voice_tts_build_payload.py  test_voice_tts_config.py
