[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phygital-studio-sidecar"
version = "0.0.1"
description = "Local FastAPI sidecar bridging Phygital+ API to Adobe CEP panels (Pr/AE)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx[http2]>=0.27",
  "truststore>=0.10",
  "loguru>=0.7",
  "Pillow>=11",
  "pillow-heif>=0.18",
  "playwright>=1.48",
  "python-multipart>=0.0.12",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[project.scripts]
phygital-studio-sidecar = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "live: requires running sidecar and valid Phygital session (skipped in CI)",
]
testpaths = ["tests"]
